# test-duplicate-repo

./: .version  Makefile  README  eml-gpsd@.service  eml-gpsfwd@.service  eml-itsnet@.service  eml-mw-server@.service  eml-mwtun@.service  env1  env2  env3  gen_itsnet_conf  install.sh  itseml.py  itseml.sh  requirements.txt  sample.json  sample.nginx.conf  setup.py  setup_netns  version.sh  ws.py
carla-integration/: choir.py  get_data.py  start_its_station.json  utils_carla.py
carla_emulation_yogoko/: package.xml  setup.cfg  setup.py
carla_emulation_yogoko/carla_emulation_yogoko/: carla_pvt_translator_node.py  carla_spatem_translator_node.py  utility.py
carla_emulation_yogoko/launch/: pvt_translator.launch.py  pvt_translator_multi.launch.py  spatem_translator.launch.py  yogoko_publisher_multi.launch.py
carla_emulation_yogoko/resource/: spawn_cam_vehicle_example.py
carla_emulation_yogoko/resource/config/: cam_station_config.json  spatem_station_config.json  spatem_translator_config.json
debian/: changelog  control  rules
doc/: readme_camdeamon.txt  sample.nginx.conf
itseml/: __init__.py  itseml.py
mw-server/: choirconf.xml  log4j.properties  truststore.jks
record_replay_scripts/: config_init.py  recorder_utils.py  replay_record.py  service_order.json
scripts/: configure_yghost.py
selfy-hands_on/: manual_control.py  spawn_npc.py
service_files/: eml-camsender@.service  eml-gpsfwd@.service  eml-gpspipe@.service  eml-ip-setup@.service  eml-itsnet@.service  eml-mapsender@.service  eml-mqtt-notify@.service  eml-mw-server@.service  eml-mwtun@.service  (+3 more)
(+38 files in other folders)
