<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_emulation_yogoko</name>
  <version>0.0.0</version>
  <description>ROS2 packages use to emulate SPATEM and CAM messages to YGhost</description>
  <maintainer email="support@yogoko.fr">Yogoko R and D team</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>carla_msgs</depend>
  <depend>yogoko_ros_api</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
